refactor(web): clean up unused styles and components; update imports for consistency

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": ".",
+    "moduleResolution": "bundler",
+    "module": "Preserve",
     "paths": {
       "@/*": ["./src/*"]
     }
