feat(web): implement PostCSS plugins for px to rem conversion and scaling; update configuration and imports

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "exports": {
     "./components/*": "./src/components/*.tsx",
-    "./lib/*": "./src/lib/*.ts",
+    "./lib/*": ["./src/lib/*.ts", "./src/lib/*.mjs"],
     "./globals.css": "./src/globals.css",
     "./tailwind.config": "./tailwind.config.ts"
   },
